# yew-rs

./: Cargo.toml  README.md  index.html
src/: main.rs
