[package]
name = "new-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"     
gloo = "0.11.0"
base64 = "0.22.1"
web-sys = { version = "0.3.70", features = ["DragEvent", "DataTransfer", "File", "HtmlInputElement"] }
